fix: scrollbar on web

--- a/apps/next/src/styles/styles.css
+++ b/apps/next/src/styles/styles.css
@@ -108,11 +108,11 @@ html {
   /* Prevent text size change on orientation change https://gist.github.com/tfausak/2222823#file-ios-8-web-app-html-L138 */
   -webkit-text-size-adjust: 100%;
   height: 100%;
-  overflow-y: scroll !important;
 }
 
 body {
   display: flex;
+  /* Allows you to scroll below the viewport; default value is visible */
   overflow-y: visible;
   overscroll-behavior-y: none;
   text-rendering: optimizeLegibility;
